welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:8: error: type mismatch;
 found   : Unit
 required: Int
			if (die2==6) return 1;
                        ^withoutDoubles:6: error: type mismatch;
 found   : Unit
 required: Int
		if (die1==die2) {
                ^